# docs/swagger.json
@@ -27,11 +27,11 @@
                 "parameters": [
                     {
                         "description": "Original URL to be shortened",
-                        "name": "originalUrl",
+                        "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.ShortenRequestDTO"
                         }
                     }
                 ],
@@ -39,7 +39,16 @@
                     "201": {
                         "description": "Returns the shortened URL",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.ShortenResponseDTO"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to parse request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     }
                 }
@@ -74,6 +83,24 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "dto.ShortenRequestDTO": {
+            "type": "object",
+            "properties": {
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.ShortenResponseDTO": {
+            "type": "object",
+            "properties": {
+                "result": {
+                    "type": "string"
                 }
             }
         }
